# ds

./: .dockerignore  .env.celine.example  .env.consumer.example  .env.example  .env.local  .env.producer.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  build.gradle.kts  dev.tmux.conf  docker-compose.celine-demo.yml  docker-compose.consumer.yml  docker-compose.observability.yml  docker-compose.producer.yml  docker-compose.production.yml  docker-compose.provider.yml  docker-compose.runtime.yml  docker-compose.yml  ds.code-workspace  mkdocs.yml  settings.gradle.kts
libs/ds-auth/: AGENTS.md  pyproject.toml
libs/ds-auth/src/ds_auth/: __init__.py  config.py  errors.py  fastapi.py  jwt.py  models.py  permissions.py  principal.py  production.py  service_token.py
libs/ds-auth/tests/: test_claims.py  test_fastapi.py  test_permissions.py  test_production.py  test_verify.py
libs/ds-e2e/: AGENTS.md  README.md  pyproject.toml
libs/ds-e2e/src/ds_e2e/: __init__.py  cleanup.py  cli.py  config.py  http.py  models.py  runner.py  scenario.py
libs/ds-e2e/src/ds_e2e/flows/: __init__.py  api_contract.py  authz_perimeter.py  base.py  catalog_discovery.py  chains.py  consent_purpose.py  consent_request.py  dcp_trust.py  lineage.py  org_onboarding.py  (+4 more)
libs/ds-e2e/tests/: test_cleanup.py  test_config.py  test_flows.py  test_http.py  test_models.py  test_scenario.py
libs/ds-edc/: AGENTS.md  pyproject.toml
libs/ds-edc/src/ds_edc/: __init__.py  client.py  schemas.py  webhooks.py
services/connector/: .env.example  AGENTS.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
services/connector/alembic/: env.py
services/connector/alembic/versions/: 0001_initial.py  0002_consumer_access_requests.py  0003_access_request_agreement.py  0004_consent_controller.py  0005_consent_legal_basis.py  0006_consent_negotiation_link.py
services/connector/charts/: Chart.yaml  values.yaml
services/connector/config/: consumer-key.json  consumer-vault.properties  consumer.properties  provider-key.json  provider-vault.properties  provider.properties  trust-anchor-key.json
services/connector/docs/: consent-subject-id.md
services/connector/governance/: governance.overlay.yaml.example  governance.yaml  participants.yaml  sharing-offers.yaml
services/connector/src/connector/: __init__.py  config.py  dependencies.py  main.py  metrics.py
services/connector/tests/: __init__.py  conftest.py  test_auth.py  test_authorizations.py  test_consent_ask_projection.py  test_consent_provisioning.py  test_consent_vocabulary.py  test_governance_mapper.py  test_health.py  test_internal_api.py  test_membership_check.py  test_pending_sweep.py  test_provenance_events.py  test_registry.py
services/connector/tests/fixtures/: governance.yaml  sharing-offers.yaml
services/dataset-api-fiware-adapter/: AGENTS.md  README.md  pyproject.toml
services/dataset-api-fiware-adapter/examples/governance/: fiware-energy.yaml
services/dataset-api-fiware-adapter/src/dataset_api_fiware/: client.py  config.py  executor.py  normalizer.py  routes.py  row_filters.py  schemas.py
services/dataset-api-fiware-adapter/tests/: test_client.py  test_config.py  test_normalizer.py  test_row_filters.py  test_schemas.py
services/dataset-api-mock/: AGENTS.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml
services/dataset-api-mock/src/dataset_api_mock/: __init__.py  main.py
services/federated-catalog/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml
services/federated-catalog/src/federated_catalog/: __init__.py  cache.py  config.py  crawler.py  dependencies.py  main.py  registry.py
services/federated-catalog/tests/: conftest.py  test_auth.py  test_cli.py  test_crawler.py  test_mapper.py  test_registry.py
services/governance/: AGENTS.md  README.md  Taskfile.yml  pyproject.toml
services/governance/src/governance/: __init__.py  mapper.py  models.py  resolver.py
services/governance/tests/tests/: test_mapper.py  test_models.py  test_resolver.py
services/identity-registry/: AGENTS.md  Dockerfile  README.md  Taskfile.yml  alembic.ini  pyproject.toml
services/identity-registry/alembic/: env.py
services/identity-registry/alembic/versions/: 0001_initial.py  0002_add_participant_sts_secret.py  0003_add_owners_table.py  0004_add_organization_memberships.py  0005_participant_roles_to_jsonb.py  0006_org_onboarding.py
services/identity-registry/docs/: security.md
services/identity-registry/seed/: agreements.dev.yaml  owners.dev.yaml  owners.yaml.example
services/identity-registry/seed/content/: independent-controller-en.md  participation-en.md  participation-it.md
services/identity-registry/src/identity_registry/: __init__.py  config.py  dependencies.py  main.py
services/identity-registry/tests/: conftest.py  test_agreements_current.py  test_api.py  test_auth.py  test_crypto.py  test_dcp_auth.py  test_did.py  test_health.py  test_keycloak_admin.py  test_memberships.py  test_org_onboarding.py  test_owners.py  test_status_list.py  test_vc.py
services/provenance/: .env.example  AGENTS.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
services/provenance/alembic/: env.py
services/provenance/alembic/versions/: 0001_initial.py
services/provenance/charts/: Chart.yaml  values.yaml
services/provenance/charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret-db.yaml  service.yaml
services/provenance/src/provenance/: config.py  dependencies.py  main.py
services/provenance/tests/: __init__.py  conftest.py  test_auth.py  test_events.py  test_events_consent.py  test_health.py  test_lineage.py  test_nodes.py  test_relations.py
services/sts/: .env.example  AGENTS.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
services/sts/src/sts/: config.py  main.py  token.py
services/vc-wallet/: .env.example  AGENTS.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
services/vc-wallet/src/vc_wallet/: config.py  main.py
(+384 files in other folders)
