[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-auth"
version = "0.1.0"
description = "Shared JWT authentication and unified scope/group authorization for the dataspaces platform"
requires-python = ">=3.12"
dependencies = [
    "pyjwt[crypto]>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
# FastAPI dependency helpers (require_permission). Core stays framework-free.
fastapi = [
    "fastapi>=0.115",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "fastapi>=0.115",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ds_auth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
