[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-e2e"
version = "0.1.0"
description = "End-to-end verification framework for the dataspaces platform"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "psycopg[binary]>=3.1",
    "rich>=13",
]

[project.scripts]
ds-e2e = "ds_e2e.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ds_e2e"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
