[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-e2e"
version = "0.1.0"
description = "End-to-end verification framework for the dataspaces platform"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "psycopg[binary]>=3.1",
    "pyyaml>=6",
    "rich>=13",
    "ds-edc",
]

[project.scripts]
ds-e2e = "ds_e2e.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6",
]

[tool.uv.sources]
ds-edc = { path = "../ds-edc", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ds_e2e"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
