[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-connector"
version = "0.1.0"
description = "EDC orchestration, consent management, and governance service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "aiosmtplib>=3.0",
    "cryptography>=42",
    "ds-governance",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]

[tool.uv.sources]
ds-governance = { path = "../governance", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/connector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
