[project]
name = "dataset-api-fiware"
version = "0.1.0"
description = "FIWARE/QuantumLeap extension for Dataset API"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dataset",
    "httpx>=0.28.1",
    "pydantic>=2.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/dataset_api_fiware"]
sources = {"src" = ""}

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[project.entry-points."celine.dataset.routes"]
fiware = "dataset_api_fiware.routes:router"

[project.entry-points."celine.dataset.row_filters"]
fiware_entity = "dataset_api_fiware.row_filters:FiwareEntityFilterHandler"
