[project]
name = "dataset-api-mock"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]
