[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset-api-mock"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # ServiceTokenProvider — the PEP authenticates to ds-connector's
    # /internal/* API as svc-ds-dataset-api rather than with the shared
    # X-Api-Key, which is also EDC's Management API key.
    "ds-auth",
]

[tool.uv.sources]
ds-auth = { path = "../../libs/ds-auth", editable = true }

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_api_mock"]
