[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-federated-catalog"
version = "0.1.0"
description = "Federated DCAT-AP catalog crawler for the dataspaces platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/federated_catalog"]
