[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-federated-catalog"
version = "0.1.0"
description = "Federated DCAT-AP catalog crawler for the dataspaces platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
fc-cli = "federated_catalog.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/federated_catalog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]
