[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-governance"
version = "0.1.0"
description = "Shared governance models, ODRL mapper, and resolver for the dataspaces platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/governance"]

[tool.mypy]
strict = true
