[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-identity-registry"
version = "0.1.0"
description = "Identity Registry — DID lifecycle, VC issuance, participant registry, StatusList2021"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "cryptography>=43.0",
    "pyjwt>=2.9",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
ir-cli = "identity_registry.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/identity_registry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
