[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-provenance"
version = "0.1.0"
description = "W3C PROV-O compatible provenance and audit service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-ulid>=2.0",
    "pyjwt[crypto]>=2.9",
    "ds-auth",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[tool.uv.sources]
ds-auth = { path = "../../libs/ds-auth", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/provenance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]
