[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-vc-wallet"
version = "0.1.0"
description = "Verifiable Credential wallet for DCP dataspace identity"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42",
    "python-jose[cryptography]>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vc_wallet"]
